// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebsiteThemeScope — emitted variables > bold-creative / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 16px 40px -8px rgb(0 0 0 / 0.24)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > bold-creative / none 1`] = `
{
  "--primary": "265 85% 58%",
  "--primary-hover": "265 85% 52%",
  "--ring": "265 85% 58%",
  "--website-accent": "330 80% 60%",
  "--website-accent-solid": "hsl(330 80% 60%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "265 85% 58%",
  "--website-primary-muted": "hsl(265 85% 58% / 0.3)",
  "--website-primary-solid": "hsl(265 85% 58%)",
  "--website-primary-surface": "hsl(265 85% 58% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "22 92% 55%",
  "--website-secondary-solid": "hsl(22 92% 55%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 16px 40px -8px rgb(0 0 0 / 0.24)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > bold-creative / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 16px 40px -8px rgb(0 0 0 / 0.24)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > corporate-learning / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "90rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "2.5rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > corporate-learning / none 1`] = `
{
  "--primary": "215 60% 40%",
  "--primary-hover": "215 60% 34%",
  "--ring": "215 60% 40%",
  "--website-accent": "185 55% 40%",
  "--website-accent-solid": "hsl(185 55% 40%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "90rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "215 60% 40%",
  "--website-primary-muted": "hsl(215 60% 40% / 0.3)",
  "--website-primary-solid": "hsl(215 60% 40%)",
  "--website-primary-surface": "hsl(215 60% 40% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "205 30% 45%",
  "--website-secondary-solid": "hsl(205 30% 45%)",
  "--website-section-padding": "2.5rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > corporate-learning / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "90rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "2.5rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > minimal-editorial / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "48rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > minimal-editorial / none 1`] = `
{
  "--primary": "220 15% 15%",
  "--primary-hover": "220 15% 9%",
  "--ring": "220 15% 15%",
  "--website-accent": "14 65% 50%",
  "--website-accent-solid": "hsl(14 65% 50%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "48rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "220 15% 15%",
  "--website-primary-muted": "hsl(220 15% 15% / 0.3)",
  "--website-primary-solid": "hsl(220 15% 15%)",
  "--website-primary-surface": "hsl(220 15% 15% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "30 8% 45%",
  "--website-secondary-solid": "hsl(30 8% 45%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > minimal-editorial / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "48rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > modern-education / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0.75rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 2px 8px -2px rgb(0 0 0 / 0.08)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > modern-education / none 1`] = `
{
  "--primary": "217 91% 55%",
  "--primary-hover": "217 91% 49%",
  "--ring": "217 91% 55%",
  "--website-accent": "38 92% 55%",
  "--website-accent-solid": "hsl(38 92% 55%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "217 91% 55%",
  "--website-primary-muted": "hsl(217 91% 55% / 0.3)",
  "--website-primary-solid": "hsl(217 91% 55%)",
  "--website-primary-surface": "hsl(217 91% 55% / 0.08)",
  "--website-radius": "0.75rem",
  "--website-secondary": "173 65% 40%",
  "--website-secondary-solid": "hsl(173 65% 40%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 2px 8px -2px rgb(0 0 0 / 0.08)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > modern-education / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "0.75rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 2px 8px -2px rgb(0 0 0 / 0.08)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > premium-academy / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "0 8px 24px -4px rgb(0 0 0 / 0.12)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > premium-academy / none 1`] = `
{
  "--primary": "222 47% 25%",
  "--primary-hover": "222 47% 19%",
  "--ring": "222 47% 25%",
  "--website-accent": "350 60% 45%",
  "--website-accent-solid": "hsl(350 60% 45%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "222 47% 25%",
  "--website-primary-muted": "hsl(222 47% 25% / 0.3)",
  "--website-primary-solid": "hsl(222 47% 25%)",
  "--website-primary-surface": "hsl(222 47% 25% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "38 75% 48%",
  "--website-secondary-solid": "hsl(38 75% 48%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "0 8px 24px -4px rgb(0 0 0 / 0.12)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > premium-academy / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "0 8px 24px -4px rgb(0 0 0 / 0.12)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;
